# landslide-wf-postproc

./: README.md  ampfact.py  ampfact_func.py  my_plot_runups.py  my_run_postproc_all.py  plot_runups.py  postprocess_HySea  pyproject.toml  requirements.txt  run_postproc_all.py  run_postproc_combo_files.py
data/: messina_runups_data.npz
factors/: ampf_messina.txt  global_ampf_v04.txt  global_v04_messina.txt
postprocess_cpp/: cNcHySea.h  cNcHySea_offshore.cpp  cNcHySea_rw.cpp  cNcHySea_tlkv.cpp  make.postprocess_HySea.sh  postprocess_HySea.cpp
postprocess_cpp/share/: cMrg.cpp  cMrg.h  cXY.cpp  cXY.h  utilits.cpp  utilits.h
